syntax = "proto3";
package vultisig.keysign.v1;

import "vultisig/keysign/v1/coin.proto";

option go_package = "github.com/vultisig/commondata/go/vultisig/keysign/v1;v1";
option java_package = "vultisig.keysign.v1";
option swift_prefix = "VS";

message OneInchTransaction {
  string from = 1;
  string to = 2;
  string data = 3;
  string value = 4;
  string gas_price = 5;
  int64 gas = 6;
  string swap_fee = 7;
}
message OneInchQuote {
  string dst_amount = 1;
  OneInchTransaction tx = 2;
}

message OneInchSwapPayload {
  Coin from_coin = 1;
  Coin to_coin = 2;
  string from_amount = 3;
  string to_amount_decimal = 4;
  OneInchQuote quote = 5;
}
